fixed overlap

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -3544,8 +3544,8 @@ $ui-header-logo-wordmark-width: 99px;
 .button-scroll-list-container {
   display: flex;
   align-items: center;
-  max-width: 100%; /* Ensures the container doesn't exceed the available width */
-  overflow: hidden; /* Hide any overflow */
+  max-width: 100%;
+  overflow: hidden;
 }
 
 .icon-button {
@@ -3558,20 +3558,19 @@ $ui-header-logo-wordmark-width: 99px;
 .button-scroll-list {
   display: flex;
   overflow-x: auto;
-  scrollbar-width: none; /* Firefox */
-  -ms-overflow-style: none; /* Internet Explorer 10+ */
-  flex-grow: 1; /* Ensures it takes the available space */
-  white-space: nowrap; /* Prevents line breaks in the items */
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  flex-grow: 1;
+  white-space: nowrap;
 }
 
 .button-scroll-list::-webkit-scrollbar {
-  /* WebKit browsers */
   display: none;
 }
 
 .followed-tags-list {
   overflow: hidden;
-  max-width: 75%;
+  flex: 0 1 auto;
 }
 
 .hashtag-wrapper {
